--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,6 @@
 PORT=3000
+FIREBASE_PROJECT_ID=your-project-id
+FIREBASE_API_KEY=your-api-key
+FIREBASE_DB_URL=https://your-project-id.firebaseio.com
+FIREBASE_CLIENT_EMAIL=your-client-email
+FIREBASE_PRIVATE_KEY=your-private-key
