--- a/backend/package.json
+++ b/backend/package.json
@@ -23,13 +23,15 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "firebase-admin": "^13.3.0",
+    "pg": "^8.16.3",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
+    "@types/pg": "^8.15.4",
     "node-typescript": "^0.1.3"
   }
 }
