--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,4 +4,4 @@ FIREBASE_API_KEY=your-api-key
 FIREBASE_DB_URL=https://your-project-id.firebaseio.com
 FIREBASE_CLIENT_EMAIL=your-client-email
 FIREBASE_PRIVATE_KEY=your-private-key
-DATABASE_URL=postgres://TEST@TEST:5432/TEST
+DATABASE_URL=postgres://TEST:TEST@localhost:5432/TEST
