--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=3000
 SECRETS_DIR=./secrets
-DATABASE_URL=postgres://TEST:TEST@localhost:5432/TEST
+DATABASE_URL=postgres://TEST:TEST@postgres_db:5432/TEST
