--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,11 +2,11 @@ FROM node:18
 
 WORKDIR /app
 
-COPY package*.json ./
-RUN npm install --omit=dev
-
-COPY dist .
+#COPY package*.json ./
+#RUN npm install --omit=dev
+#
+#COPY dist .
 
 EXPOSE 3000
 
-CMD ["node", "index.js"]
+CMD ["npm", "run","dev"]
