--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,10 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "nodemon --exec ts-node src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -28,8 +29,10 @@
     "express-validator": "^7.2.1",
     "firebase-admin": "^13.3.0",
     "install": "^0.13.0",
+    "nodemon": "^3.1.10",
     "npm": "^11.4.2",
     "pg": "^8.16.3",
+    "ts-node": "^10.9.2",
     "validatorjs": "^3.22.1",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
