--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,11 +2,13 @@ FROM node:18
 
 WORKDIR /app
 
-#COPY package*.json ./
-#RUN npm install --omit=dev
-#
-#COPY dist .
+COPY package*.json ./
+RUN npm install
+
+COPY . .
+
+RUN npm run build
 
 EXPOSE 3000
 
-CMD ["npm", "run","dev"]
+CMD ["npm", "run","prod"]
